recursion.logo.lessons.recursion.logo.koch.SquareKoch.scala.error
SquareKoch:2: error: ambiguous reference to overloaded definition,
both method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
and  method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
match argument types (Int,Double)
    squareSide(levels, length);
    ^SquareKoch:5: error: ambiguous reference to overloaded definition,
both method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
and  method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
match argument types (Int,Double)
    squareSide(levels, length);
    ^SquareKoch:8: error: ambiguous reference to overloaded definition,
both method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
and  method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
match argument types (Int,Double)
    squareSide(levels, length);
    ^SquareKoch:11: error: ambiguous reference to overloaded definition,
both method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
and  method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
match argument types (Int,Double)
    squareSide(levels, length);
    ^SquareKoch:23: error: ambiguous reference to overloaded definition,
both method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
and  method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
match argument types (Int,Double)
    squareSide(levels-1, length/3)
    ^SquareKoch:25: error: ambiguous reference to overloaded definition,
both method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
and  method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
match argument types (Int,Double)
    squareSide(levels-1, length/3)
    ^SquareKoch:27: error: ambiguous reference to overloaded definition,
both method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
and  method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
match argument types (Int,Double)
    squareSide(levels-1, length/3)
    ^SquareKoch:29: error: ambiguous reference to overloaded definition,
both method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
and  method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
match argument types (Int,Double)
    squareSide(levels-1, length/3)
    ^SquareKoch:31: error: ambiguous reference to overloaded definition,
both method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
and  method squareSide in class SquareKoch of type (levels: Int, length: Double)Unit
match argument types (Int,Double)
    squareSide(levels-1, length/3)
    ^SquareKoch:17: error: method squareSide is defined twice
  conflicting symbols both originated in file 'plm.runtime1.SquareKoch'
def squareSide(levels:Int, length:Double) {
    ^